tests/snapshots/snapshots__typescript_sample_level4.snap
---
source: tests/snapshots.rs
expression: output
---
sample.ts
     2→export function processItems(items: string[]): number {
     6→function helper(): void {}
     8→export async function fetchData(url: string): Promise<Response> {
    12→export class TokenParser {
    13→    private tokens: Token[];
    14→
    15→    constructor(input: string) {
    16→        this.tokens = [];
    17→    }
    18→
    19→    public parse(): Token[] {
    20→        return this.tokens;
    21→    }
    22→
    23→    private advance(): void {}
    24→}
    26→export interface Visitor {
    27→    visitToken(token: Token): void;
    28→    visitAll(tokens: Token[]): void;
    29→}
    31→export enum TokenKind {
    32→    Ident = "ident",
    33→    Number = "number",
    34→    Symbol = "symbol",
    35→}
    37→export type Span = [number, number];
    39→export const MAX_TOKENS = 1024;
    41→export default class DefaultExport {
    42→    name: string = "";
    43→}
    45→export namespace Utils {
    46→    export function format(s: string): string {
