tests/snapshots/snapshots__typescript_sample_snapshot.snap
---
source: tests/snapshots.rs
expression: output
---
sample.ts
     2→export function processItems
     6→function helper
     8→export async function fetchData
    12→export class TokenParser
    15→    constructor
    19→    public parse
    23→    private advance
    26→export interface Visitor
    27→    visitToken
    28→    visitAll
    31→export enum TokenKind
    37→export type Span
    39→export const MAX_TOKENS
    41→export default class DefaultExport
    45→export namespace Utils
    46→    export function format
